--- a/src/css/header-styles/header.module.css
+++ b/src/css/header-styles/header.module.css
@@ -1,43 +1,135 @@
 header {
     background-color: var(--secondary-color);
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
     align-items: center;
     position: sticky;
     top: 0;
     z-index: 1;
-    box-shadow: inset 0 0 5px var(--text-color);
-    justify-content: space-between;
-    padding: var(--tiny-x) var(--tiny-x);
+    /* box-shadow: inset 0 0 5px var(--text-color); */
+    column-gap: var(--tiny-x);
+    padding: var(--tiny-xx) var(--tiny-x);
 }
 
-header a:first-of-type>* {
-    width: 130px;
+.logo {
+    width: auto;
     height: auto;
     margin-top: var(--tiny);
+    margin-right: var(--small);
 }
 
 .flex {
     display: flex;
-    gap: var(--tiny-x);
     align-items: center;
 }
 
-icons {
+header button {
+    /* box-shadow: none; */
+}
+
+.hamburger {
+    background-color: transparent;
+    border: none;
+    grid-column: 1/2;
+}
+
+.hamburger>* {
+    color: var(--text-color);
+    font-size: var(--inter);
+}
+
+.initials {
+    border: none;
+    font-weight: 600;
+    border-radius: 50%;
+    padding: var(--tiny-x) var(--tiny-x);
+    font-size: .75rem;
+    display: flex;
+    align-items: center;
+    background-color: var(--text-color);
+    color: var(--secondary-color);
+    /* box-shadow: 0 0 2px var(--text-color); */
+    margin-top: -.05rem;
+    margin-right: var(--tiny);
+    position: relative;
+}
+
+
+.profile-info {
+    position: absolute;
+    top: 85%;
+    right: 4%;
+    padding: var(--small-x) var(--tiny-xx);
+    background-color: var(--secondary-color);
+    z-index: 999;
+    border-radius: var(--tiny-x);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    row-gap: var(--tiny-xx);
+    min-width: 150px;
+    transform: scale(0);
+    transition: transform .3s ease-out;
+    /* box-shadow: var(--shadow); */
+}
+
+.profile-info button {
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+    font-weight: 700;
+    border-radius: var(--tiny-x);
+    padding: var(--tiny-xx);
+    letter-spacing: 2px;
+}
+
+.profile-info button:nth-of-type(2) {
+    grid-column: 1/2;
+    /* box-shadow: inset 0 0 10px var(--text-color); */
+    color: var(--text-color);
+    background-color: transparent;
+}
+
+.profile-info h2 {
+    font-weight: 500;
+}
+
+.profile-dropdown {
+    transform: scale(1);
+}
+
+.icons {
+
     justify-self: flex-end;
-    flex: 1 1 100%;
+    column-gap: var(--tiny);
+    grid-column: span 3/ -1;
+    color: var(--primary-color)
+}
+
+.search {
+    position: relative;
+    border: none;
+    /* box-shadow: none; */
+    background-color: transparent;
+    margin-top: var(--tiny);
+}
+
+.search>* {
+    font-size: 1.75rem;
+    align-self: center;
 }
 
 .cart,
 .user-icon {
-    color: var(--primary-color);
+    color: var(--text-color);
     font-size: var(--small-x);
     justify-self: flex-end;
-    flex: 1 1 100%;
+    flex: 1 1 auto;
 }
 
 .user-icon {
     font-size: var(--small-x);
     display: inline-block;
+    background-color: var(text);
 }
 
 .user-icon>* {
@@ -59,11 +151,48 @@ icons {
     font-size: var(--tiny-x);
 }
 
+
+@media screen and (max-width: 330px) {
+    header {
+        padding: 0;
+    }
+
+    .cart-quantity {
+        font-size: var(--tiny);
+        padding: 1px 4px;
+    }
+
+    .hamburger>* {
+        font-size: var(--small-x);
+    }
+
+    .initials {
+        padding: var(--tiny) var(--tiny);
+    }
+
+    .icons {
+        overflow-x: scroll;
+        padding: var(--tiny-xx) var(--tiny);
+    }
+
+
+    .search>* {
+        font-size: 1.25rem;
+        align-self: center;
+        color: var(--primary-color);
+    }
+
+    .cart {
+        font-size: var(--tiny-xx);
+    }
+
+}
+
 @media screen and (min-width: 320px) {
 
-    header {
+    /* header {
         padding: var(--small) var(--tiny-x);
-    }
+    } */
 
     header a:first-of-type>* {
         width: 170px;
@@ -79,9 +208,16 @@ icons {
     }
 
     .cart-quantity {
-        padding: 2.5px 7px;
-        font-size: var(--tiny-xx);
+        right: -.3rem;
+        width: 22px;
+        height: 22px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        font-size: .6rem;
         margin-left: -1rem;
+        font-weight: 400;
         top: -.3rem;
     }
 
