--- a/src/css/main-styles/Cart.module.css
+++ b/src/css/main-styles/Cart.module.css
@@ -15,7 +15,7 @@
 
 .cart-container.visible {
     height: 100vh;
-    overflow-y: visible;
+    overflow: scroll;
     padding-bottom: var(--lg);
 }
 
@@ -49,17 +49,15 @@
 
 .cart-item {
     display: grid;
-    grid-template-columns: 25% 55% 18%;
-    column-gap: 2%;
+    grid-template-columns: auto 8fr 1fr;
+    column-gap: var(--tiny-x);
     align-items: center;
     width: 100%;
     animation: fadeIn 1s ease;
     transition: width 1s ease;
-    box-shadow: inset 0 0 5px var(--text-color);
-    padding: var(--tiny-x);
-    padding-right: var(--tiny-xx);
-    padding-left: 0;
-    border-radius: var(--tiny-x);
+    padding: var(--tiny-xx) var(--tiny-x);
+    /* padding-right: var(--small); */
+    /* border-radius: var(--tiny-x); */
     background-color: white;
 }
 
@@ -68,28 +66,25 @@
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
     row-gap: var(--tiny-x);
-    column-gap: var(--tiny-x);
     justify-content: flex-start;
     align-items: center;
 }
 
 
-img {
-    border-radius: var(--tiny-xx);
-    aspect-ratio: 1/.7;
-}
-
-picture {
-    padding: var(--tiny-xx);
+.cart-item picture {
+    /* padding: 0 var(--tiny-xx); */
+    max-width: 60px;
+    margin-right: var(--tiny);
 }
 
 hr {
     margin-bottom: var(--small);
 }
 
-h2 {
-    font-size: var(--tiny-xx);
+.title {
+    font-size: var(--small);
     grid-column: 1/3;
+    font-weight: 600;
 }
 
 .subtotal {
@@ -98,10 +93,6 @@ h2 {
     align-items: center;
     margin-bottom: var(--small);
     margin-top: var(--medium);
-}
-
-h3 {
-    padding-right: var(--small-x);
 }
 
 .checkout {
@@ -125,40 +116,56 @@ h3 {
     opacity: .5;
 }
 
-span.quantity {
-    grid-column: 1 / 2;
-    flex: 1 1 50%;
-    width: 80%;
+.cart-container .quantity {
+    display: inline-block;
+    width: 100%;
+    padding: var(--tiny-x) var(--tiny);
+    /* background-color: red; */
 }
 
 span.quantity>* {
     padding: 0;
-
 }
 
-span.quantity>button>* {
-    font-size: var(--tiny-xx);
+.cart-container .quantity>button {
+    /* box-shadow: inset 0 0 3px var(--secondary-color); */
+    font-weight: 900;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+    border-radius: var(--tiny);
+    padding: .2rem .3rem;
+    width: 100%;
+    border-radius: var(--tiny);
 }
 
-span.quantity input {
-    font-size: var(--tiny-xx);
+.cart-container .quantity input {
     font-weight: 700;
-    padding: .2rem 0;
+    text-align: center;
+    width: 100%;
+    border: none;
+    padding: var(--tiny-xx) 0;
+    background-color: transparent;
+}
+
+.cart-container .quantity input:focus {
+    /* box-shadow: none; */
 }
 
 .remove-item {
     font-size: var(--small);
     color: red;
+    font-weight: 500;
     cursor: pointer;
-    /* box-shadow: var(--shadow); */
-    width: 100%;
-    height: 100%;
-    padding: .5rem;
+    /* box-shadow: none; */
+    border: none;
+    padding: 0;
+    background-color: transparent;
 }
 
 .price {
     flex: 1 1 50%;
     width: 50%;
+    color: var(--primary-color);
 }
 
 
@@ -170,7 +177,7 @@ span.quantity input {
 
 
     .cart-item {
-        grid-template-columns: 29% 59% 10%;
+        /* grid-template-columns: 29% 59% 10%; */
     }
 
 }
