--- a/src/css/main-styles/Cart.module.css
+++ b/src/css/main-styles/Cart.module.css
@@ -56,8 +56,6 @@
     animation: fadeIn 1s ease;
     transition: width 1s ease;
     padding: var(--tiny-xx) var(--tiny-x);
-    /* padding-right: var(--small); */
-    /* border-radius: var(--tiny-x); */
     background-color: white;
 }
 
@@ -133,9 +131,15 @@ span.quantity>* {
     color: var(--secondary-color);
     background-color: var(--primary-color);
     border-radius: var(--tiny);
-    padding: .2rem .3rem;
+    padding: .2rem .2rem;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
     border-radius: var(--tiny);
+    font-size: var(--small-x);
+
 }
 
 .cart-container .quantity input {
