--- a/src/css/main-styles/productDetails.module.css
+++ b/src/css/main-styles/productDetails.module.css
@@ -1,7 +1,6 @@
 .page {
     padding: var(--small);
     /* background-color: var(--text-color); */
-
 }
 
 .product-details-container {
@@ -77,11 +76,12 @@
     padding: var(--small);
 }
 
-.set-quantity {
+.product-details-container .set-quantity {
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 28% 44% 28%;
     /* background-color: white; */
+    max-width: 50%;
 }
 
 .product-details-actions .set-quantity input {
@@ -97,8 +97,7 @@
     border: 2px solid transparent;
 }
 
-.set-quantity>button {
-    /* padding: var(--small) 0; */
+.product-details-container .set-quantity>button {
     background-color: var(--primary-color);
     /* box-shadow: inset 0 0 5px white; */
     color: var(--secondary-color);
@@ -106,19 +105,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: var(--tiny-x);
+    padding: var(--tiny-x);
 }
 
-.set-quantity>button>* {
-    font-size: var(--small-x);
-    /* font-size: 1.5rem; */
+.product-details-container .set-quantity>button>* {
+    font-size: var(--inter);
     font-weight: 900;
     padding: 0;
-}
-
-.set-quantity>button:first-of-type {
-    border-radius: var(--tiny-x) 0 0 var(--tiny-x);
-}
-
-.set-quantity>button:last-of-type {
-    border-radius: 0 var(--tiny-x) var(--tiny-x) 0;
 }
