--- a/src/css/App.css
+++ b/src/css/App.css
@@ -62,6 +62,7 @@ button {
 }
 
 .button {
+    cursor: pointer;
     background-color: var(--primary-color);
     color: var(--secondary-color);
     padding: var(--tiny-xx) var(--medium);
@@ -85,17 +86,20 @@ main a:hover {
 
 .notice {
     background-color: var(--primary-color);
-    position: fixed;
+    position: absolute;
     top: 3%;
-    left: 8%;
-    right: 8%;
-    padding: var(--tiny-x);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding: var(--tiny-xx);
     display: grid;
     grid-template-columns: auto auto;
     align-items: center;
+    column-gap: var(--lg);
     border-radius: var(--tiny);
     z-index: 999;
     animation: bounceIn .5s ease-out;
+    max-width: max-content;
 }
 
 @keyframes bounceIn {
@@ -138,4 +142,12 @@ main a:hover {
     font-size: var(--small);
     color: var(--secondary-color);
     text-align: center;
+}
+
+.error-notice {
+    background-color: red;
+}
+
+.error-notice p {
+    color: white;
 }
